<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/labelKickCounterStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7986cb"
            android:padding="16dp"
            android:text="@string/initial_kick_counter_status_message"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#5c6bc0"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/labelKickCounterStatus">

            <TextView
                android:id="@+id/labelKickCounterTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="@string/initial_timer_value"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBabyKicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:foreground="?android:selectableItemBackground"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="60dp"
            app:cardElevation="30dp"
            app:layout_constraintTop_toBottomOf="@id/labelKickCounterStatus">

            <ImageView
                android:id="@+id/cardStartContractionTimingImage"
                android:layout_width="141dp"
                android:layout_height="105dp"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/ic_footprint_outline" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="#5c6bc0"
                app:cardCornerRadius="15dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@id/labelKickCounterStatus">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="20dp"
                        android:text="@string/kicks"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/labelKicks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorButtonNormal"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="#5c6bc0"
                app:cardCornerRadius="15dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@id/labelKickCounterStatus">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="20dp"
                        android:text="@string/start"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/labelStartKickTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorButtonNormal"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/initial_time_label_short"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="#5c6bc0"
                app:cardCornerRadius="15dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toBottomOf="@id/labelKickCounterStatus">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="20dp"
                        android:text="@string/recent"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/labelRecentKickTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorButtonNormal"
                        android:gravity="center_horizontal"
                        android:padding="10dp"
                        android:text="@string/initial_time_label_short"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResetKickCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/reset"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFinishKickCounting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:foreground="?android:selectableItemBackground"
                android:text="@string/finish"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>